{
  "version": 4,
  "terraform_version": "1.4.5",
  "serial": 11,
  "lineage": "3718bfa4-a746-27f5-5579-1566919d1d91",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/networkInterfaces/demo-nic",
            "internal_domain_name_suffix": "wsrwrplucrsenkblklf3ondphc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.10.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/virtualNetworks/demo-10/subnets/subnet1"
              }
            ],
            "location": "eastus",
            "name": "demo-nic",
            "private_ip_address": "10.10.1.4",
            "private_ip_addresses": [
              "10.10.1.4"
            ],
            "resource_group_name": "Demorg"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/networkSecurityGroups/demo-nsg1",
            "location": "eastus",
            "name": "demo-nsg1",
            "resource_group_name": "Demorg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "rdp",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/networkSecurityGroups/demo-nsg1/securityRules/ssh",
            "name": "ssh",
            "network_security_group_name": "demo-nsg1",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "Demorg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.10.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/virtualNetworks/demo-10/subnets/subnet1",
            "name": "subnet1",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Demorg",
            "virtual_network_name": "demo-10"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/virtualNetworks/demo-10/subnets/subnet1",
            "network_security_group_id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/networkSecurityGroups/demo-nsg1",
            "subnet_id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/virtualNetworks/demo-10/subnets/subnet1"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg1",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet1",
            "azurerm_virtual_network.vnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.10.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "bd68a3b4-1474-4664-a82b-52cbd7346f3a",
            "id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/virtualNetworks/demo-10",
            "location": "eastus",
            "name": "demo-10",
            "resource_group_name": "Demorg",
            "subnet": [
              {
                "address_prefix": "10.10.1.0/24",
                "id": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/virtualNetworks/demo-10/subnets/subnet1",
                "name": "subnet1",
                "security_group": "/subscriptions/a9df6626-93b9-4ff3-86e9-37059cff95c0/resourceGroups/Demorg/providers/Microsoft.Network/networkSecurityGroups/demo-nsg1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}